--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
 
-    <title>My portofolio</title>
+    <title>Eraflazz</title>
   </head>
   <body>
     <!--navbar-brand-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#home">
           <div class="align-items-center fw-bolder fst-italic">ERA<span class="text-danger align-items-center fw-bolder fst-italic">FLAZZ</span></div>
         </a>
         <button
