menyesuaikan nama file

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/dana.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Dana" />
+            <img src="img/product/Dana.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Dana" />
             <div class="card shadow-sm" id="card-product">
               <div class="card-body">
                 <h5 class="card-title">Top up dana</h5>
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/tdf1.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Telkomsel" />
+            <img src="img/product/TDF1.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Telkomsel" />
             <div class="card shadow-sm" id="card-product">
               <div class="card-body">
                 <h5 class="card-title">Telkomsel data flash</h5>
