--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+    <!-- Animate On Scroll -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- my CSS -->
     <link href="css/style.css" rel="stylesheet" />
-
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
 
     <title>Eraflazz</title>
   </head>
@@ -25,7 +25,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand">
-          <div class="align-items-center fw-bolder fst-italic">ERA<span class="text-danger align-items-center fw-bolder fst-italic">FLAZZ</span></div>
+          <div class="align-items-center fw-bolder fst-italic nama-web">
+            ERA<span class="text-danger align-items-center fw-bolder fst-italic">FLAZZ</span>
+          </div>
         </a>
         <button
           class="navbar-toggler"
@@ -43,6 +45,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#product">Products</a>
+            <a class="nav-link" href="#service">Services</a>
             <a class="nav-link" href="#contact">Contact</a>
           </div>
         </div>
@@ -52,10 +55,10 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center" id="jumbotron">
       <img class="rounded-circle img-thumbnail" src="img/logo.png" alt="Alfan Rozak" width="200" height="200" />
-      <div class="align-items-center fw-bolder fs-2 fst-italic">
+      <div class="align-items-center fw-bolder fs-2 fst-italic nama-web">
         ERA<span class="text-danger align-items-center fw-bolder fs-2 fst-italic">FLAZZ</span>
       </div>
-      <p class="lead">Server pulsa H2H murah, Produk lengkap berkualitas, Customer service fast respon.</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#212529"
@@ -76,13 +79,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-sm-4">
+          <div class="col-sm-4" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="400">
             <p>
               Eraflazz berdiri sejak September 2021, yang berlokasi di jl. raya panusupan Desa Panusupan Rt 009 Rw 001, kecamatan Cilongok Kabupaten
               Banyumas. Dengan dibekali pengalaman dibidang penjualan produk digital sejak tahun 2003.
             </p>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300" data-aos-offset="400">
             <p>
               Kami sangat mengutamakan kualitas dan pelayanan terbaik bagi seluruh reseller-reseller kami, dengan menyediakan produk dengan validasi
               100% dan kecepatan transaksi detikan!. Customer service yang siap membantu setiap kendala. Sehingga kepuasan anda terjamin!
@@ -111,8 +114,16 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/Dana.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Dana" />
-            <div class="card shadow-sm" id="card-product">
+            <img
+              src="img/product/dana.png"
+              id="product-image"
+              class="rounded-circle img-thumbnail mb-3 shadow"
+              alt="Dana"
+              data-aos="fade-down"
+              data-aos-duration="2000"
+              data-aos-offset="400"
+            />
+            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
               <div class="card-body">
                 <h5 class="card-title">Top up dana</h5>
                 <p class="card-text">
@@ -122,8 +133,17 @@
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/4.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Indosat" />
-            <div class="card shadow-sm" id="card-product">
+            <img
+              src="img/product/4.png"
+              id="product-image"
+              class="rounded-circle img-thumbnail mb-3 shadow"
+              alt="Indosat"
+              data-aos="fade-down"
+              data-aos-delay="300"
+              data-aos-duration="2000"
+              data-aos-offset="400"
+            />
+            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
               <div class="card-body">
                 <h5 class="card-title">Indosat</h5>
                 <p class="card-text">
@@ -133,8 +153,17 @@
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/TDF1.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Telkomsel" />
-            <div class="card shadow-sm" id="card-product">
+            <img
+              src="img/product/tdf1.png"
+              id="product-image"
+              class="rounded-circle img-thumbnail mb-3 shadow"
+              alt="Telkomsel"
+              data-aos="fade-down"
+              data-aos-delay="600"
+              data-aos-duration="2000"
+              data-aos-offset="400"
+            />
+            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
               <div class="card-body">
                 <h5 class="card-title">Telkomsel data flash</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -142,8 +171,17 @@
             </div>
           </div>
           <div class="col-md-3 mb-3 text-center">
-            <img src="img/product/shopee.png" id="product-image" class="rounded-circle img-thumbnail mb-3 shadow" alt="Shopee" />
-            <div class="card shadow-sm" id="card-product">
+            <img
+              src="img/product/shopee.png"
+              id="product-image"
+              class="rounded-circle img-thumbnail mb-3 shadow"
+              alt="Shopee"
+              data-aos="fade-down"
+              data-aos-delay="900"
+              data-aos-duration="2000"
+              data-aos-offset="400"
+            />
+            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
               <div class="card-body">
                 <h5 class="card-title">Top up shopee</h5>
                 <p class="card-text">
@@ -165,10 +203,59 @@
     </section>
     <!-- end product -->
 
+    <!-- Service -->
+    <section class="service" id="service">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h2>Service</h2>
+            <hr />
+          </div>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/service/1.png" class="d-block w-100 rounded" alt="Daftar bebas biaya" />
+            </div>
+            <div class="carousel-item">
+              <img src="img/service/2.png" class="d-block w-100 rounded" alt="Transaksi 24 jam" />
+            </div>
+            <div class="carousel-item">
+              <img src="img/service/3.png" class="d-block w-100 rounded" alt="Deposit minimal 100rb" />
+            </div>
+            <div class="carousel-item">
+              <img src="img/service/7.png" class="d-block w-100 rounded" alt="Deposit minimal 100rb" />
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
     <section class="contact" id="contact">
       <div class="container">
         <div class="row text-center">
-          <div class="col mt-3 mb-3">
+          <div class="col mb-3">
             <h2>Contact</h2>
             <hr />
           </div>
@@ -212,6 +299,32 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <!-- AOS SCRIPT -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", {
+        duration: 5,
+        delay: 1.5,
+        text: "Server pulsa H2H - Produk murah, lengkap, dan berkualitas, Customer service fast respon.",
+      });
+      gsap.from(".jumbotron img", { duration: 1, x: -100, delay: 0.5, opacity: 0 });
+      gsap.from(".navbar", { duration: 1, x: -100, opacity: 0 });
+      gsap.from(".nama-web", { duration: 1.5, x: -100, opacity: 0, delay: 1, ease: "back" });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwtu_lkWjSZEgBkEyrX1pnl5kUBew_RPATXB0yxaZF2jW1HjUDeZ3AmgB27zZ9bOcdJ/exec";
