--- a/index.html
+++ b/index.html
@@ -1,357 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-
-    <!-- Animate On Scroll -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- my CSS -->
-    <link href="css/style.css" rel="stylesheet" />
-
-    <title>Eraflazz</title>
-  </head>
-  <body>
-    <!--navbar-brand-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
-      <div class="container">
-        <a class="navbar-brand">
-          <div class="align-items-center fw-bolder fst-italic nama-web">
-            ERA<span class="text-danger align-items-center fw-bolder fst-italic">FLAZZ</span>
-          </div>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="#product">Products</a>
-            <a class="nav-link" href="#service">Services</a>
-            <a class="nav-link" href="#contact">Contact</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Jumbotron -->
-    <section class="jumbotron text-center" id="jumbotron">
-      <img class="rounded-circle img-thumbnail" src="img/logo.png" alt="Alfan Rozak" width="200" height="200" />
-      <div class="align-items-center fw-bolder fs-2 fst-italic nama-web">
-        ERA<span class="text-danger align-items-center fw-bolder fs-2 fst-italic">FLAZZ</span>
-      </div>
-      <p class="lead"></p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#212529"
-          fill-opacity="1"
-          d="M0,128L60,117.3C120,107,240,85,360,69.3C480,53,600,43,720,80C840,117,960,203,1080,208C1200,213,1320,139,1380,101.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- Akhir jumbotron -->
-
-    <!-- About -->
-    <section class="about" id="about">
-      <div class="container">
-        <div class="row mb-3">
-          <div class="col text-center">
-            <h2>About</h2>
-            <hr />
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col-sm-4" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="400">
-            <p>
-              Eraflazz berdiri sejak September 2021, yang berlokasi di jl. raya panusupan Desa Panusupan Rt 009 Rw 001, kecamatan Cilongok Kabupaten
-              Banyumas. Dengan dibekali pengalaman dibidang penjualan produk digital sejak tahun 2003.
-            </p>
-          </div>
-          <div class="col-sm-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300" data-aos-offset="400">
-            <p>
-              Kami sangat mengutamakan kualitas dan pelayanan terbaik bagi seluruh reseller-reseller kami, dengan menyediakan produk dengan validasi
-              100% dan kecepatan transaksi detikan!. Customer service yang siap membantu setiap kendala. Sehingga kepuasan anda terjamin!
-            </p>
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,128L60,106.7C120,85,240,43,360,53.3C480,64,600,128,720,160C840,192,960,192,1080,192C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- End About -->
-
-    <!-- Product -->
-    <section class="product" id="product">
-      <div class="container">
-        <div class="row mb-3 text-center">
-          <div class="col mb-3">
-            <h2>Products</h2>
-            <hr />
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-3 mb-3 text-center">
-            <img
-              src="img/product/dana.png"
-              id="product-image"
-              class="rounded-circle img-thumbnail mb-3 shadow"
-              alt="Dana"
-              data-aos="fade-down"
-              data-aos-duration="2000"
-              data-aos-offset="400"
-            />
-            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
-              <div class="card-body">
-                <h5 class="card-title">Top up dana</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-3 text-center">
-            <img
-              src="img/product/4.png"
-              id="product-image"
-              class="rounded-circle img-thumbnail mb-3 shadow"
-              alt="Indosat"
-              data-aos="fade-down"
-              data-aos-delay="300"
-              data-aos-duration="2000"
-              data-aos-offset="400"
-            />
-            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
-              <div class="card-body">
-                <h5 class="card-title">Indosat</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-3 text-center">
-            <img
-              src="img/product/tdf1.png"
-              id="product-image"
-              class="rounded-circle img-thumbnail mb-3 shadow"
-              alt="Telkomsel"
-              data-aos="fade-down"
-              data-aos-delay="600"
-              data-aos-duration="2000"
-              data-aos-offset="400"
-            />
-            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
-              <div class="card-body">
-                <h5 class="card-title">Telkomsel data flash</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-3 text-center">
-            <img
-              src="img/product/shopee.png"
-              id="product-image"
-              class="rounded-circle img-thumbnail mb-3 shadow"
-              alt="Shopee"
-              data-aos="fade-down"
-              data-aos-delay="900"
-              data-aos-duration="2000"
-              data-aos-offset="400"
-            />
-            <div class="card shadow-sm" id="card-product" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="250">
-              <div class="card-body">
-                <h5 class="card-title">Top up shopee</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#212529"
-          fill-opacity="1"
-          d="M0,96L80,90.7C160,85,320,75,480,90.7C640,107,800,149,960,160C1120,171,1280,149,1360,138.7L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- end product -->
-
-    <!-- Service -->
-    <section class="service" id="service">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col">
-            <h2>Service</h2>
-            <hr />
-          </div>
-        </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/service/1.png" class="d-block w-100 rounded" alt="Daftar bebas biaya" />
-            </div>
-            <div class="carousel-item">
-              <img src="img/service/2.png" class="d-block w-100 rounded" alt="Transaksi 24 jam" />
-            </div>
-            <div class="carousel-item">
-              <img src="img/service/3.png" class="d-block w-100 rounded" alt="Deposit minimal 100rb" />
-            </div>
-            <div class="carousel-item">
-              <img src="img/service/7.png" class="d-block w-100 rounded" alt="Deposit minimal 100rb" />
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ngoding Beast | Eraflazz</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0f0f0f;
+      color: #ffffff;
+    }
+    header {
+      background-color: #1f1f1f;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+    main {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+    }
+    .project {
+      background-color: #222;
+      border-radius: 10px;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    }
+    .project h3 {
+      margin-top: 0;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #1f1f1f;
+      color: #aaa;
+    }
+    a {
+      color: #4dc9ff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Ngoding Beast</h1>
+    <p>Website portofolio milik Alfan Rozak | Eraflazz</p>
+  </header>
+  <main>
+    <section class="intro">
+      <h2>Halo! 👋</h2>
+      <p>Saya Alfan, seorang pengembang yang sedang membangun masa depan satu baris kode dalam satu waktu. Ini adalah proyek saya di dunia web & coding.</p>
     </section>
 
-    <section class="contact" id="contact">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col mb-3">
-            <h2>Contact</h2>
-            <hr />
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6">
-            <div class="alert alert-warning alert-dismissible fade show d-none form-alert" role="alert">
-              <strong>Thanks!</strong> Your message has been sent.
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <form name="eraflazz-contact-form">
-              <div class="mb-3">
-                <label for="name" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="name" name="name" aria-describedby="name" />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" />
-              </div>
-              <div class="mb-3">
-                <label for="pesan" class="form-label">Messages</label>
-                <textarea class="form-control" id="pesan" name="pesan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-danger btn-send">Send</button>
-              <button class="btn btn-danger btn-loading d-none" type="button">
-                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                Loading...
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
+    <section class="project">
+      <h3>📂 Project 1: Website Portofolio</h3>
+      <p>Situs ini adalah hasil belajar GitHub Pages dan HTML/CSS untuk membangun identitas digital saya.</p>
     </section>
 
-    <footer class="bg-dark text-center">
-      <p class="text-white">Created by <i class="fa-solid fa-heart text-danger"></i> <a class="text-white fw-bold" href="#"> Alfanro</a></p>
-    </footer>
+    <section class="project">
+      <h3>📱 Project 2: Android App (Coming Soon)</h3>
+      <p>Saya sedang mengembangkan aplikasi Android sederhana menggunakan Android Studio di PC "Ngoding Beast".</p>
+    </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <section class="project">
+      <h3>🧠 Project 3: Machine Learning Test</h3>
+      <p>Eksperimen sederhana dengan Python dan machine learning menggunakan dataset kecil, untuk latihan AI & data science.</p>
+    </section>
+  </main>
 
-    <!-- AOS SCRIPT -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        once: true,
-      });
-    </script>
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
-
-    <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
-    <script>
-      gsap.registerPlugin(TextPlugin);
-      gsap.to(".lead", {
-        duration: 5,
-        delay: 1.5,
-        text: "Server pulsa H2H - Produk murah, lengkap, dan berkualitas, Customer service fast respon.",
-      });
-      gsap.from(".jumbotron img", { duration: 1, x: -100, delay: 0.5, opacity: 0 });
-      gsap.from(".navbar", { duration: 1, x: -100, opacity: 0 });
-      gsap.from(".nama-web", { duration: 1.5, x: -100, opacity: 0, delay: 1, ease: "back" });
-    </script>
-
-    <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbwtu_lkWjSZEgBkEyrX1pnl5kUBew_RPATXB0yxaZF2jW1HjUDeZ3AmgB27zZ9bOcdJ/exec";
-      const form = document.forms["eraflazz-contact-form"];
-      const btnSend = document.querySelector(".btn-send");
-      const btnLoading = document.querySelector(".btn-loading");
-      const formAlert = document.querySelector(".form-alert");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        // ketika tombol di submit
-        // tampilkan tombol loading , hilangkan tombol kirim
-        btnLoading.classList.toggle("d-none");
-        btnSend.classList.toggle("d-none");
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => {
-            // tampilkan tombol send , hilangkan tombol loading
-            btnLoading.classList.toggle("d-none");
-            btnSend.classList.toggle("d-none");
-            // tampilkan alert
-            formAlert.classList.toggle("d-none");
-            // reset form
-            form.reset();
-            console.log("Success!", response);
-          })
-          .catch((error) => console.error("Error!", error.message));
-      });
-    </script>
-  </body>
+  <footer>
+    &copy; 2025 Eraflazz. Dibangun dengan semangat ngoding dan kopi.
+  </footer>
+</body>
 </html>
