--- a/index.html
+++ b/index.html
@@ -1,98 +1,168 @@
 <!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ngoding Beast | Eraflazz</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #121212;
-      color: #fff;
-    }
-    .hero {
-      background-color: #1f1f1f;
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      color: #bbb;
-    }
-    .card {
-      background-color: #1c1c1c;
-      border: none;
-      color: #fff;
-    }
-    .card-title {
-      color: #4dc9ff;
-    }
-    footer {
-      background-color: #1f1f1f;
-      color: #aaa;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 3rem;
-    }
-    a {
-      color: #4dc9ff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <div class="hero">
-    <h1>Ngoding Beast</h1>
-    <p>Website portofolio milik Alfan Rozak | Eraflazz</p>
-  </div>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <div class="container my-5">
-    <div class="row mb-4">
-      <div class="col">
-        <h2>Halo! 👋</h2>
-        <p>Saya Alfan, seorang pengembang yang sedang membangun masa depan satu baris kode dalam satu waktu. Ini adalah proyek saya di dunia web & coding.</p>
-      </div>
-    </div>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- my CSS -->
+    <link href="css/style.css" rel="stylesheet" />
 
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">📂 Project 1: Website Portofolio</h5>
-            <p class="card-text">Situs ini adalah hasil belajar GitHub Pages dan HTML/CSS untuk membangun identitas digital saya.</p>
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
+
+    <title>My portofolio</title>
+  </head>
+  <body>
+    <!--navbar-brand-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <div class="align-items-center fw-bolder fst-italic">ALFAN<span class="text-danger align-items-center fw-bolder fst-italic">ROZAK</span></div>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#product">Products</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">📱 Project 2: Android App (Coming Soon)</h5>
-            <p class="card-text">Saya sedang mengembangkan aplikasi Android sederhana menggunakan Android Studio di PC "Ngoding Beast".</p>
+    </nav>
+
+    <!-- Jumbotron -->
+    <section class="jumbotron text-center" id="jumbotron">
+      <img class="rounded-circle img-thumbnail" src="img/logo.png" alt="Alfan Rozak" width="200" height="200" />
+      <div class="align-items-center fw-bolder fs-2 fst-italic">
+        ALFAN<span class="text-danger align-items-center fw-bolder fs-2 fst-italic">ROZAK</span>
+      </div>
+      <p class="lead">Programmer dan penggiat digital, siap membangun solusi masa depan dengan teknologi.</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#212529"
+          fill-opacity="1"
+          d="M0,128L60,117.3C120,107,240,85,360,69.3C480,53,600,43,720,80C840,117,960,203,1080,208C1200,213,1320,139,1380,101.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir jumbotron -->
+
+    <!-- About -->
+    <section class="about" id="about">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col text-center">
+            <h2>About</h2>
+            <hr />
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-sm-4">
+            <p>
+              Saya Alfan Rozak, aktif di dunia digital sejak tahun 2003, dan membangun usaha serta proyek berbasis teknologi sejak 2021.
+              Berlokasi di Desa Panusupan, Banyumas.
+            </p>
+          </div>
+          <div class="col-sm-4">
+            <p>
+              Saya mengutamakan kualitas layanan dan efisiensi, serta terus belajar untuk membangun sistem digital yang cepat, aman, dan andal.
+              Kepuasan dan kepercayaan pengguna adalah prioritas utama.
+            </p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">🧠 Project 3: Machine Learning Test</h5>
-            <p class="card-text">Eksperimen sederhana dengan Python dan machine learning menggunakan dataset kecil, untuk latihan AI & data science.</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,128L60,106.7C120,85,240,43,360,53.3C480,64,600,128,720,160C840,192,960,192,1080,192C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- End About -->
+
+    <!-- Product -->
+    <section class="product" id="product">
+      <div class="container">
+        <div class="row mb-3 text-center">
+          <div class="col mb-3">
+            <h2>Products</h2>
+            <hr />
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- Produk tetap -->
+          <!-- Isi tetap seperti sebelumnya -->
+        </div>
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#212529"
+          fill-opacity="1"
+          d="M0,96L80,90.7C160,85,320,75,480,90.7C640,107,800,149,960,160C1120,171,1280,149,1360,138.7L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- end product -->
+
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col mt-3 mb-3">
+            <h2>Contact</h2>
+            <hr />
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Full name</label>
+                <input type="text" class="form-control" id="name" aria-describedby="name" />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" />
+              </div>
+              <div class="mb-3">
+                <label for="pesan" class="form-label">Messages</label>
+                <textarea class="form-control" id="pesan" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-danger mb-5">Send</button>
+            </form>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </section>
 
-  <footer>
-    &copy; 2025 Eraflazz. Dibangun dengan semangat ngoding dan kopi.
-  </footer>
+    <footer class="bg-dark text-center">
+      <p class="text-white">Created by <i class="fa-solid fa-heart text-danger"></i> <a class="text-white fw-bold" href="#"> Alfan Rozak</a></p>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
