--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center" id="jumbotron">
-      <img class="rounded-circle img-thumbnail" src="img/logo.png" alt="Alfan Rozak" width="200" height="200" />
+      <img class="rounded-circle img-thumbnail" src="img/alfan.png" alt="Alfan Rozak" width="200" height="200" />
       <div class="align-items-center fw-bolder fs-2 fst-italic">
         ALFAN<span class="text-danger align-items-center fw-bolder fs-2 fst-italic">ROZAK</span>
       </div>
