--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </nav>
 
     <section class="jumbotron text-center" id="jumbotron">
-      <img class="rounded-circle img-thumbnail" src="img/alfan.png" alt="Alfan Rozak" width="200" height="200" />
-      <div class="fw-bolder fs-2 fst-italic">ALFAN<span class="text-danger">ROZAK</span></div>
+      <img class="rounded-circle img-thumbnail" src="img/alfan.jpg" alt="Alfan Rozak" width="200" height="200" />
+      <div class="fw-bolder fs-2 fst-italic">ALFAN<span class="text-danger"> ROZAK</span></div>
       <p class="lead">Programmer | UI/UX Enthusiast | Tech Explorer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#212529" fill-opacity="1" d="M0,128L60,117.3C120,107,240,85,360,69.3C480,53,600,43,720,80C840,117,960,203,1080,208C1200,213,1320,139,1380,101.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
