--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-sm-10">
-            <p>Saya <strong>Alfan Rozak</strong>, seorang pengembang web dan aplikasi dengan pengalaman lebih dari 5 tahun di dunia digital. Saya memiliki keahlian dalam membangun sistem berbasis web, user interface, dan pengembangan aplikasi Android. Latar belakang saya dimulai sejak tahun 2003, berawal dari usaha server pulsa dan berkembang ke ranah teknologi digital secara profesional sejak 2021.</p>
-            <p>Passion saya adalah menciptakan solusi efisien, ringan, dan bermanfaat. Saat ini saya fokus pada pengembangan front-end & backend sederhana, UI/UX, dan pengembangan bisnis digital berbasis website dan mobile. Saya juga aktif dalam belajar AI & pengembangan teknologi masa depan. Siap berkolaborasi dan membangun sesuatu yang berdampak positif bagi banyak orang.</p>
+            <p>  Halo! Saya <strong>Alfan Rozak</strong>, seorang pembelajar mandiri dan penggiat dunia digital yang sangat antusias dengan teknologi. Meski saya belum memiliki pengalaman profesional di bidang coding, saya terus belajar setiap hari dengan semangat tinggi dan rasa ingin tahu yang besar.</p>
+            <p>Ketertarikan saya pada dunia pemrograman, UI/UX, dan teknologi web dimulai dari pengalaman membangun bisnis digital sejak tahun 2003. Kini, saya sedang fokus mempelajari HTML, CSS, JavaScript, serta tools seperti Bootstrap dan Android Studio. Target saya sederhana: menjadi developer yang tidak hanya bisa ngoding, tapi juga menciptakan solusi nyata.</p>
+            <p>Saya percaya bahwa proses belajar adalah perjalanan yang luar biasa. Saya suka eksplorasi, suka trial-and-error, dan tidak takut gagal — karena saya yakin, dari situ saya tumbuh. Jika kamu juga penggiat teknologi, atau punya proyek menarik, saya sangat terbuka untuk ngobrol dan bertukar ide.</p>
           </div>
-        </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#ffffff" fill-opacity="1" d="M0,128L60,106.7C120,85,240,43,360,53.3C480,64,600,128,720,160C840,192,960,192,1080,192C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
